# alpha

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  logger.cc  logger_formatter.cc  mmap_file.cc  mmap_file.h  slice.cc
alpha/: AsyncTcpClient.cc  AsyncTcpClient.h  AsyncTcpConnection.cc  AsyncTcpConnection.h  AsyncTcpConnectionCoroutine.cc  AsyncTcpConnectionCoroutine.h  AsyncTcpConnectionException.cc  AsyncTcpConnectionException.h  CMakeLists.txt  Channel.cc  Channel.h  CodedInputStream.cc  CodedInputStream.h  Compiler.h  Coroutine.cc  Coroutine.h  Endian.h  EventLoop-inl.h  EventLoop.cc  EventLoop.h  File.cc  File.h  FileUtil.cc  FileUtil.h  Format.cc  Format.h  HTTPHeaders.cc  HTTPHeaders.h  HTTPMessage.cc  HTTPMessage.h  HTTPMessageCodec.cc  HTTPMessageCodec.h  HTTPResponseBuilder.cc  HTTPResponseBuilder.h  IOBuffer.cc  IOBuffer.h  Logger.cc  Logger.h  LoggerFile.cc  LoggerFile.h  (+129 more)
alpha/experimental/: RegionBasedAllocator-inl.h  RegionBasedAllocator.h  RegionBasedHashMap.h  RegionBasedHashTable-inl.h  RegionBasedHashTable.h  RegionBasedHelper.h  RegionBasedVector-inl.h  RegionBasedVector.h  main.cc
base/: CMakeLists.txt  compiler.h  slice.h
bus/: CMakeLists.txt  bus_manager.cc  bus_manager.h  example.cc  mmap_file.cc  mmap_file.h  process_bus.cc  process_bus.h  ring_buffer.cc  ring_buffer.h
examples/: CMakeLists.txt
examples/AMQP-cpp/: .main.cc.swp  BasicAuthorization.h  CMakeLists.txt  Channel.cc  Channel.h  CodecEnv.cc  CodecEnv.h  CodedInputStream.cc  CodedInputStream.h  CodedOutputStream.cc  CodedOutputStream.h  CodedWriter.cc  CodedWriter.h  Connection.cc  Connection.h  ConnectionCloseFSM.cc  ConnectionCloseFSM.h  ConnectionEstablishFSM.cc  ConnectionEstablishFSM.h  ConnectionMgr.cc  ConnectionMgr.h  ConnectionParameters.cc  ConnectionParameters.h  ConnectionWorkingFSM.cc  ConnectionWorkingFSM.h  DecodeUnit-inl.h  DecodeUnit.cc  DecodeUnit.h  EncodeUnit.cc  EncodeUnit.h  FSM.cc  FSM.h  FieldTable.cc  FieldTable.h  FieldValue.cc  FieldValue.h  Frame.cc  Frame.h  FrameCodec.cc  FrameCodec.h  (+7 more)
examples/Async/: CMakeLists.txt  main.cc
examples/AsyncConnection/: CMakeLists.txt  main.cc
examples/Connector/: CMakeLists.txt  main.cc
examples/EchoServer/: CMakeLists.txt  echo_server.cc  main.cc
examples/MysticSalesmanSvrd/: CMakeLists.txt  MysticSalesmanSvrd.proto  MysticSalesmanSvrdApp.cc  MysticSalesmanSvrdApp.h  MysticSalesmanSvrdMain.cc
examples/MysticSalesmanSvrd/proto/: CMakeLists.txt
examples/NetSvrd/: CMakeLists.txt  netsvrd.conf  netsvrd_app.cc  netsvrd_app.h  netsvrd_echo_client.cc  netsvrd_echo_worker.cc  netsvrd_frame.h  netsvrd_frame_codec.cc  netsvrd_frame_codec.h  netsvrd_main.cc  netsvrd_virtual_server.cc  netsvrd_virtual_server.h  netsvrd_worker.cc  netsvrd_worker.h
examples/PingPong/: CMakeLists.txt  ping.cc  ping_pong_client.cc  ping_pong_server.cc  pong.cc
examples/Random/: CMakeLists.txt  main.cc
examples/RegionBasedContainer/: CMakeLists.txt  main.cc
examples/RingBuffer/: CMakeLists.txt  reader.cc
examples/SectInfoServer/: CMakeLists.txt  SectInfoServerApp.cc  SectInfoServerApp.h  SectInfoServerMain.cc
examples/SectInfoServer/proto/: CMakeLists.txt  SectInfoServer.proto
examples/SectMemberCacheServer/: CMakeLists.txt  SectMemberCacheServerApp.cc  SectMemberCacheServerApp.h  SectMemberCacheServerMain.cc
examples/SectMemberCacheServer/proto/: CMakeLists.txt  SectMemberCacheServer.proto
examples/SimpleHTTPServer/: CMakeLists.txt  main.cc
examples/SkipList/: CMakeLists.txt  main.cc
examples/Slice/: CMakeLists.txt  main.cc
examples/Subprocess/: CMakeLists.txt  main.cc
examples/TCPConnector/: CMakeLists.txt  main.cc
examples/TTClient/: CMakeLists.txt  main.cc  tt_client.cc  tt_client.h  tt_coded_stream.cc  tt_coded_stream.h  tt_protocol_codec.cc  tt_protocol_codec.h
examples/ThronesBattleServer/: CMakeLists.txt  ThronesBattleSvrd.proto  ThronesBattleSvrdApp.cc  ThronesBattleSvrdApp.h  ThronesBattleSvrdConf.cc  ThronesBattleSvrdConf.h  ThronesBattleSvrdDef.cc  ThronesBattleSvrdDef.h  ThronesBattleSvrdFeedsChannel-inl.h  ThronesBattleSvrdFeedsChannel.cc  ThronesBattleSvrdFeedsChannel.h  ThronesBattleSvrdFeedsUtil.h  ThronesBattleSvrdHTTPHandlers.cc  ThronesBattleSvrdMain.cc  ThronesBattleSvrdMessageDispatcher.cc  ThronesBattleSvrdMessageDispatcher.h  ThronesBattleSvrdRankVector.cc  ThronesBattleSvrdRankVector.h  ThronesBattleSvrdTaskBroker.cc  ThronesBattleSvrdTaskBroker.h  fightsvrd.pb.cc  fightsvrd.pb.h  netsvrd_frame.h
examples/ThronesBattleServer/conf/: ThronesBattle.conf
examples/ThronesBattleServer/ext/: netsvrd_frame.h
examples/ThronesBattleServer/proto/: CMakeLists.txt  ThronesBattleSvrd.proto  feedssvrd.proto  fightsvrd.proto
examples/UDPServer/: CMakeLists.txt  main.cc
examples/coroutine/: CMakeLists.txt  a.out  main.cc  player.cc  player.h
examples/logsvrd/: logsvrd-client.cc  logsvrd.cc  logsvrd.h
logger/: CMakeLists.txt  example.cc  log_file.cc  log_file.h  logger.cc  logger_formatter.cc  logger_formatter.h  logger_stream.cc  logger_stream.h
logsvrd/: CMakeLists.txt  logsvrd-client.cc  logsvrd.cc  logsvrd.h
tests/: CMakeLists.txt  RingBufferTest.cc  SkipListTest.cc  TcpConnectionBufferTest.cc  gtest-all.cc  skiplist-unittest.cc  unittest-skiplist.cc
tools/: Format.sh  HeaderGuard.py  Rename.sh  ReplaceHeaderGuard.sh  SourceFilename.py
