file(GLOB LIB_ALPHA_SRCS "*.cc")
set(ALPHA "alpha")
if (ALPHA_LOG_LEVEL)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DALPHA_STRIP_LOG=${ALPHA_LOG_LEVEL}")
endif()
message(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
message(STATUS "CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
include_directories(${PROJECT_SOURCE_DIR})
add_library(${ALPHA} STATIC ${LIB_ALPHA_SRCS})
add_dependencies(${ALPHA} Boost)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/alpha
        DESTINATION include
        FILES_MATCHING PATTERN "*.h")
install(TARGETS ${ALPHA} ARCHIVE DESTINATION lib)
