include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/alpha)
add_subdirectory(Slice)
add_subdirectory(coroutine)
add_subdirectory(EchoServer)
add_subdirectory(PingPong)
add_subdirectory(TTClient)
add_subdirectory(Random)
add_subdirectory(SkipList)
add_subdirectory(SimpleHTTPServer)
