set(PROTO_INPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(PROTO_OUTPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(PROTO_GEN_FLAG "--cpp_out")
file(GLOB PROTO_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
find_program(PROTOC "protoc")

foreach(PROTO_FILE ${PROTO_FILES})
  get_filename_component(PROTO_NAME ${PROTO_FILE} NAME_WE)
  set (CURRENT_PROTO_GEN ${PROTO_OUTPUT_DIR}/${PROTO_NAME}.pb.h ${PROTO_OUTPUT_DIR}/${PROTO_NAME}.pb.cc)
  set (PROTO_GEN ${PROTO_GEN} ${CURRENT_PROTO_GEN})
  add_custom_command(OUTPUT ${CURRENT_PROTO_GEN}
    COMMAND ${PROTOC} ${PROTO_FILE} ${PROTO_GEN_FLAG} ${PROTO_OUTPUT_DIR} -I${PROTO_INPUT_DIR}
    DEPENDS ${PROTOC} ${PROTO_FILE}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
endforeach(PROTO_FILE ${PROTO_FILES})

add_library(${SECT_MEMBER_CACHE_SERVER_PROTO_LIB} STATIC ${PROTO_GEN})
